Renamed maidsafe_libsodium_sys to maidsafe_libsodium-sys.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ license = "MIT"
 
 [dependencies]
 libc = "*"
-maidsafe_libsodium_sys = "*"
+maidsafe_libsodium-sys = "*"
 rustc-serialize = "*"
 
 [dev-dependencies.cbor]
