--- a/libsodium-sys/Cargo.toml
+++ b/libsodium-sys/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "maidsafe_libsodium_sys"
+name = "maidsafe_libsodium-sys"
 description = "FFI binding to libsodium"
 repository = "https://github.com/maidsafe/sodiumoxide.git"
 keywords = ["libsodium", "NaCl", "crypto"]
