--- a/libsodium-sys/Cargo.toml
+++ b/libsodium-sys/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
-name = "maidsafe_libsodium-sys"
+name = "maidsafe_libsodium_sys"
 description = "FFI binding to libsodium"
 repository = "https://github.com/maidsafe/sodiumoxide.git"
 keywords = ["libsodium", "NaCl", "crypto"]
-version = "0.0.8"
+version = "0.0.7"
 authors = ["dnaq"]
+links = "sodium"
+build = "build.rs"
 license = "MIT"
 
 [lib]
