Avoid building the shared version of libsodium durint Travis testing.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ branches:
 install:
     - wget https://github.com/jedisct1/libsodium/releases/download/1.0.3/libsodium-1.0.3.tar.gz
     - tar xvfz libsodium-1.0.3.tar.gz
-    - cd libsodium-1.0.3 && ./configure --prefix=/usr && make && sudo make install && cd ..
+    - cd libsodium-1.0.3 && ./configure --prefix=/usr --enable-shared=no && make && sudo make install && cd ..
 script:
     - cargo build --verbose
     - cargo test --verbose
