--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,9 @@ branches:
         - master
         - gh-pages
 install:
-    - wget https://github.com/jedisct1/libsodium/releases/download/1.0.3/libsodium-1.0.3.tar.gz
-    - tar xvfz libsodium-1.0.3.tar.gz
-    - cd libsodium-1.0.3
-    - ./configure --prefix=/usr --enable-shared=no
-    - CORES=$(nproc)
-    - make check -j$CORES
-    - sudo make install
-    - cd ..
+    - wget https://github.com/maidsafe/QA/raw/master/Bash%20Scripts/Travis/install_libsodium.sh
+    - chmod 755 install_libsodium.sh
+    - ./install_libsodium.sh
 script:
     - cargo build --verbose
     - cargo test --verbose
