--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,13 @@ documentation = "http://maidsafe.net/sodiumoxide"
 repository = "https://github.com/maidsafe/sodiumoxide"
 readme = "README.md"
 keywords = ["crypto", "NaCl", "libsodium"]
-version = "0.0.11"
+version = "0.0.6"
 authors = ["dnaq"]
 license = "MIT"
 
 [dependencies]
 libc = "*"
-maidsafe_libsodium_sys = "*"
+libsodium-sys = "*"
 rustc-serialize = "*"
 
 [dev-dependencies]
