Added "dev@maidsafe.net" as additional author.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ documentation = "http://maidsafe.net/sodiumoxide"
 repository = "https://github.com/maidsafe/sodiumoxide"
 readme = "README.md"
 keywords = ["crypto", "NaCl", "libsodium"]
-version = "0.0.6"
-authors = ["dnaq"]
+version = "0.0.7"
+authors = ["dnaq", "dev@maidsafe.net"]
 license = "MIT"
 
 [dependencies]
